# Synthesis-YieldGuard-OpenTrack

./: .env.example  README.md  agent.json  agent_log.json  pyproject.toml
agents/: config.py  logging_utils.py  models.py  partner_artifacts.py  partners.py  runtime.py  yieldguard_swarm.py
docs/: architecture.mmd  audit.md  concepts.md  credentials.md  demo_terminal.md  demo_video_script.md  security.md
script/: BootstrapYieldGuard.s.sol  Deploy.s.sol  DeploySliceImpactHook.s.sol
scripts/: demo_terminal.sh  plan_live_demo.py  render_submission.py  run_agent.py
src/: SliceImpactHook.sol  YieldGuardTreasury.sol
src/interfaces/: ISliceProductHooks.sol
submissions/: synthesis.md
test/: SliceImpactHook.t.sol  YieldGuardTreasury.t.sol
tests/: test_project_context.py  test_runtime.py
